--- a/jeongev_youtube_boilerplate/client/package.json
+++ b/jeongev_youtube_boilerplate/client/package.json
@@ -27,6 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -43,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^1.0.3"
+    "http-proxy-middleware": "^1.3.1"
   }
 }
