--- a/jeongev_youtube_boilerplate/package.json
+++ b/jeongev_youtube_boilerplate/package.json
@@ -25,10 +25,13 @@
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^5.13.15",
+    "multer": "^1.4.5-lts.1",
     "react-redux": "^5.0.7",
     "saslprep": "^1.0.3",
     "supports-color": "^7.1.0"
   },
+  "proxy": "http://localhost:5000"
+  ,
   "devDependencies": {
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20"
